update 7 files and create 1 file: Dark mode toggle fix

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -189,30 +189,39 @@ body.dark .loader {
 }
 
 /* Animation classes for sliding text */
-/* Keyframes for animation */
-@keyframes text-slide {
-    0%,
-    33% {
-        transform: translateY(0%);
-    }
-    50%,
-    83% {
-        transform: translateY(-33.33%);
-    }
-    100% {
-        transform: translateY(-66.66%);
-    }
-}
 
 .animation-wrapper {
     display: block;
-    animation: text-slide 5s cubic-bezier(0.83, 0, 0.17, 1) infinite;
+    animation: text-slide 7s cubic-bezier(0.83, 0, 0.17, 1) infinite;
 }
 
 li {
     display: block;
     font-size: inherit;
     line-height: inherit;
+}
+
+/* Keyframes for animation */
+@keyframes text-slide {
+    0%,
+    20% {
+        transform: translateY(0);
+    }
+    25%,
+    45% {
+        transform: translateY(-25%);
+    }
+    50%,
+    70% {
+        transform: translateY(-50%);
+    }
+    75%,
+    95% {
+        transform: translateY(-75%);
+    }
+    100% {
+        transform: translateY(-100%);
+    }
 }
 
 .gradient-text {
